init islami app * adding splash view * adding layout view * adding quran view * adding hadith view * adding localization * adding settings view * adding theme mode

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -4,5 +4,7 @@
   "hadith": "احاديث",
   "sebha": "سيبحة",
   "radio": "راديو",
-  "settings": "إعدادات"
+  "settings": "إعدادات",
+  "language": "اللغة",
+  "theme_mode": "النمط"
 }
