--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,5 +4,7 @@
   "hadith": "Hadith",
   "sebha": "Sebha",
   "radio": "Radio",
-  "settings": "Settings"
+  "settings": "Settings",
+  "language": "Language",
+  "theme_mode": "Theme Mode"
 }
